# fastapi-backend

./: .gitignore  Makefile  alembic.ini  docker-compose.local.yaml  pyproject.toml
migrations/: env.py  last_version.txt
migrations/versions/: 2025_04_13-c21533a5578f_initial.py
src/: app_container.py  router.py  settings.py
src/auth/: controller.py  models.py  routes.py  user_repository.py
src/auth/dto/: user.py
src/core/: models_base.py  postgres.py  resource.py
