[tool.poetry]
name = "polar-backend"
version = "0.1.0"
description = ""
authors = ["merkuluf <104684125+merkuluf@users.noreply.github.com>"]
readme = "README.md"

[tool.mypy]
plugins = ["pydantic.mypy"]
disable_error_code = ["import-untyped"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
dependency-injector = "^4.46.0"
aiogram = "^3.19.0"
sqlalchemy = "^2.0.40"
ruff = "^0.11.5"
mypy = "^1.15.0"
uvicorn = "^0.34.0"
sentry-sdk = "^2.25.1"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
